--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ layout: default
 
 <script>
 
-	#trun{
-		font-size: 12px;
-	}
+	a{
+    font-size: small;
+    padding-top: 3px;
+    }
 
 </script>
 
