--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: default
 ---
 <!-- Posts -->
-
+<head>
 <script>
 
-	a{
-    font-size: small;
-    padding-top: 3px;
+	#trun{
+    	font-size: small;
+    	padding-top: 3px;
     }
 
 </script>
-
+</head>
 <ul id="posts">
 
 	{% for post in paginator.posts %}
