--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@ layout: default
 ---
 <!-- Posts -->
 <head>
-<script>
+	<style>
 
-	#trun {
-    	font-size: small;
-    	padding-top: 3px;
-    }
+		#trun {
+	    	font-size: small;
+	    	padding-top: 3px;
+	    }
 
-</script>
+	</style>
 </head>
+
 <ul id="posts">
 
 	{% for post in paginator.posts %}
