--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ layout: default
 		#trun {
 	    	font-size: small;
 	    	padding-top: 3px;
+	    	color: grey;
+	    	border-bottom: 1px solid blue;
 	    }
 
 	</style>
