--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@ layout: default
 	    	font-size: small;
 	    	padding-top: 3px;
 	    	color: black;
-	    }
-
-	    #preview {
-	    	padding-bottom: -10px;
+	    	padding-top: -10px;
 	    }
 
 	</style>
