--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ layout: default
 	    	padding-top: -100px;
 	    }
 
+	    #preview {
+	    	margin-bottom: 0.1em
+	    }
+
 	</style>
 </head>
 
