--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
 	    	padding-top: 3px;
 	    	color: black;
 	    	padding-top: -100px;
+	    	text-align: right;
 	    }
 
 	    #preview {
