--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 		#trun {
 	    	font-size: small;
 	    	padding-top: 3px;
-	    	color: black;
+	    	color: black !important;
 	    	padding-top: -100px;
 	    	text-align: right;
 	    }
